Issue number:  1231 Obtained from: Submitted by: rratta Reviewed by: rratta Issue 1231 - Property sheet selectors shift checkboxes in table
Add selector to match checkboxes withing a table's "select" td.

table.Tbl_sun4 td.TblTdSel_sun4 .CbSpn_sun4 input[type=checkbox] {
    vertical-align: middle;
    margin-top: 0px;
}

svn path=/trunk/; revision=1377


Former-commit-id: 2b15eb7b161ebf7e535850019875567fdb7a8179

--- a/themes/src/suntheme/css/layout.css
+++ b/themes/src/suntheme/css/layout.css
@@ -1329,6 +1329,11 @@ table.Tbl@THEME_CSS@ td.TblTdSrtSel@THEME_CSS@ {
 	vertical-align:middle;
 	padding:0px 3px;
 }
+/* Override checkbox selectors when in property sheet */
+table.Tbl@THEME_CSS@ td.TblTdSel@THEME_CSS@ .CbSpn@THEME_CSS@ input[type=checkbox] {
+	vertical-align: middle;
+	margin-top: 0px;
+}
 /* Regular Column Headers */
 table.Tbl@THEME_CSS@ th.TblColHdr@THEME_CSS@ {
 	border-top-width:1px; 
